--- a/templates/home/admin/dashboard.html.twig
+++ b/templates/home/admin/dashboard.html.twig
@@ -2,4 +2,6 @@
 
 {% block content %}
     <h1>Bienvenue dans votre espace d'administration</h1>
+    <br>
+    <a href="/">Retour sur la page d'accueil</a>
 {% endblock %}
