--- a/templates/home/formula/index.html.twig
+++ b/templates/home/formula/index.html.twig
@@ -9,33 +9,19 @@
         <div class="formulaPageTitle"><h1>Nos Menus</h1></div>
         <br/>
         <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 justify-content-center">
-                <div class="col formula m-3">
-                    <h3 class="formulaTitle">Menu découverte</h3>
-                    <br/>
-                    <h5 class="formulaSet">Entrée + Plat</h5>
-                    <h5 class="formulaSet">ou</h5>
-                    <h5 class="formulaSet">Plat + Dessert</h5>
-                    <h3 class="formulaPrice">22€</h3>
-                </div>
-                <div class="col formula m-3">
-                    <h3 class="formulaTitle">Menu découverte</h3>
-                    <br/>
-                    <h5 class="formulaSet">Entrée + Plat + Dessert</h5>
-                    <h3 class="formulaPrice">28€</h3>
+            <div class="row justify-content-center">
+                <div class="col mb-5">
+                    {% for formulaitem in formula %}
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title formulaTitle">{{ formulaitem.title }}</h5>
+                                <p class="card-text formulaSet">{{ formulaitem.formulaType }}</p>
+                            </div>
+                            <div class="card-footer formulaPrice">{{ formulaitem.price }}€</div>
+                        </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- Reservation button -->
-
-    <div class="container-fluid">
-        <div class="d-grid gap-2 col-4 mx-auto">
-            <button class="btn btn-outline-dark reservation" type="button">
-                Réserver
-            </button>
-        </div>
-    </div>
-    <br/>
 {% endblock %}
