--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -69,9 +69,9 @@
 
     <div class="container-fluid">
         <div class="d-grid gap-2 col-4 mx-auto">
-            <button class="btn btn-outline-dark reservation" type="button">
+            <a class="btn btn-outline-dark reservation" role="button" href="/booking">
                 Réserver
-            </button>
+            </a>
         </div>
     </div>
     <br/>
