--- a/templates/home/hours/index.html.twig
+++ b/templates/home/hours/index.html.twig
@@ -1,20 +1,62 @@
-{% extends '../../base.html.twig' %}
-
-{% block title %}Hello HoursController!{% endblock %}
+{% extends 'base.html.twig' %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+ <!-- Footer with opening hours -->
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div class="container-fluid bg-dark text-light">
+        <footer>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/apps/resto/src/Controller/HoursController.php'|file_link(0) }}">src/Controller/HoursController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/apps/resto/templates/hours/index.html.twig'|file_link(0) }}">templates/hours/index.html.twig</a></code></li>
-    </ul>
-</div>
+            <div class="opening-hours mx-auto">
+                <h3 class="ohTitle text-center">Nos horaires d'ouverture</h3>
+
+                <table class="ohTableStructure">
+                    <tr class="monday ohTable">
+                        <td><span>Lundi</span></td>
+                        <td>Fermé</td>
+                    </tr>
+                    <tr class="tuesday ohTable">
+                        <td><span>Mardi</span></td>
+                        <td>12:00 - 14:00</td>
+                        <td>19:00 - 22:00</td>
+                    </tr>
+                    <tr class="wednesday ohTable">
+                        <td><span>Mercredi</span></td>
+                        <td>12:00 - 14:00</td>
+                        <td>19:00 - 22:00</td>
+                    </tr>
+                    <tr class="thursday ohTable">
+                        <td><span>Jeudi</span></td>
+                        <td>12:00 - 14:00</td>
+                        <td>19:00 - 22:00</td>
+                    </tr>
+                    <tr class="friday ohTable">
+                        <td><span>Vendredi</span></td>
+                        <td>12:00 - 14:00</td>
+                        <td>19:00 - 22:00</td>
+                    </tr>
+                    <tr class="saturday ohTable">
+                        <td><span>Samedi</span></td>
+                        <td>12:00 - 14:00</td>
+                        <td>19:00 - 22:00</td>
+                    </tr>
+                    <tr class="sunday ohTable">
+                        <td><span>Dimanche</span></td>
+                        <td>12:00 - 14:00</td>
+                        <td>Fermé</td>
+                    </tr>
+                </table>
+                <br/>
+            </div>
+        </footer>
+    </div>
 {% endblock %}
+{% for date in hours %}
+    <table class="ohTableStructure">
+        <tr class="ohTable">
+            <td><span>{{ date.day }}</span></td>
+            <td>{{ date.time }}</td>
+            <td>{{ date.afternoon }}</td>
+        </tr>
+    </table>
+
+{% endfor %}
