--- a/templates/home/security/login.html.twig
+++ b/templates/home/security/login.html.twig
@@ -31,7 +31,7 @@
             <br>
             <div class="checkbox mb-3">
                 <label>
-                    <input type="checkbox" name="_remember_me"> Remember me
+                    <input type="checkbox" name="_remember_me"> Se souvenir de moi
                 </label>
             </div>
             <button type="submit" class="btn btn-dark mt-4 mb-5">
