--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,7 +62,7 @@
                 {% endif %}
             {% else %}
                 <a class="btn btn-light login" role="button" href="/connexion">
-                    Se connecter
+                    Se connecter / S'inscrire
                 </a>
             {% endif %}
 
