--- a/templates/home/menu/index.html.twig
+++ b/templates/home/menu/index.html.twig
@@ -8,10 +8,10 @@
     <div class="container">
         <div class="menuPageTitle"><h1>La Carte</h1></div>
         <br/>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+        <div class="row">
             <!-- Entrées -->
 
-            <div class="col">
+            <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="menuPageSub">
                     <h3>Nos Entrées</h3>
                 </div>
@@ -32,7 +32,7 @@
 
             <!-- Plats -->
 
-            <div class="col">
+            <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="menuPageSub">
                     <h3>Nos Plats</h3></div>
                 <div class="mainCourse food">
@@ -52,7 +52,7 @@
 
             <!-- Desserts -->
 
-            <div class="col">
+            <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="menuPageSub">
                     <h3>Nos Desserts</h3></div>
                 <div class="desserts food">
@@ -72,7 +72,7 @@
 
             <!-- Boissons -->
 
-            <div class="col">
+            <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="menuPageSub">
                     <h3>Les Boissons</h3></div>
                 <div class="beverages food">
