--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,13 +1,12 @@
 @import "custom";
 @import "~bootstrap/scss/bootstrap";
 
-
 body {
     padding-top: 5rem;
     background-color: #fffceb;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 576px) {
     .navbar-brand.abs {
         position: absolute;
         width: auto;
@@ -26,6 +25,13 @@ body {
 .navigation,
 .login {
     font-family: Farsan, serif;
+}
+
+.navigation {
+    font-size: x-large;
+}
+
+.login {
     font-size: larger;
 }
 
@@ -57,7 +63,7 @@ body {
     font-size: xx-large;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 576px) {
     .card-img-top {
         width: 100%;
         height: 120vw;
@@ -83,6 +89,12 @@ body {
     font-family: Hind, serif;
     font-weight: 400;
     padding: 0.1em 0.8em;
+}
+
+.ohTable > td > span {
+    font-family: Farsan, serif;
+    font-size: larger;
+    font-weight: bold;
 }
 
 .menuPageTitle,
@@ -119,3 +131,14 @@ body {
     font-family: Farsan, serif;
 }
 
+.formulaSet {
+    font-size: larger;
+}
+
+.formulaPrice {
+    font-size: x-large;
+}
+
+footer {
+    box-shadow: 0 50vh 0 50vh #212529;
+}
