--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
 
 <!-- Navigation bar -->
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand abs" aria-current="page" href="/">Le Quai Antique</a>
         <button
